--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ortega stat calculator</title>
+    <title>Ortega calendar</title>
 </head>
 <body>
 <div id="content"></div>
